--- a/src/Components/InputData/InputData.module.css
+++ b/src/Components/InputData/InputData.module.css
@@ -1,5 +1,7 @@
-input{
-width: 100%;
-padding: 5px;
-margin: 5px 0;
+input {
+    width: 100%;
+    padding: 5px;
+    margin: 5px 0;
+    background-color:whitesmoke;
 }
+
