--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,6 +21,7 @@
     width: 500px;
     margin: auto;
     padding-top: 30px;
+    padding:5px;
 }
 
 .taskClass {
@@ -37,10 +38,10 @@ button {
     padding: 5px;
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:500px) {
     .header {
         width: 100%;
-        margin: auto;
         padding-top: 20px;
+
     }
 }
