--- a/src/Components/Task/Task.module.css
+++ b/src/Components/Task/Task.module.css
@@ -6,6 +6,7 @@
     padding: 15px 0px;
     margin: 5px 0px;
     border: 1px solid black;
+    border-radius: 10px;
     background-color:whitesmoke;
     display: flex;
     justify-content: space-between;
